--- a/1.firstproject/package.json
+++ b/1.firstproject/package.json
@@ -9,9 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "responsive-carousel": "^1.5.8",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
